Fix #30009: cycles translucent BSDF + environment importance sampling not working correct.